Refactoring animedetail, animelist
