# tsoa/swagger.json
@@ -359,6 +359,60 @@
 				]
 			}
 		},
+		"/animelist/setanime": {
+			"post": {
+				"operationId": "SetAnime",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"animeId": "animeid not be check of exist!",
+											"data": "{\"review\": \"test\",\"status\":\"view\",\"star\":\"8\"}"
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "animeId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "data",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "header",
+						"name": "Authorization",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/auth/signup": {
 			"post": {
 				"operationId": "Signup",
